WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
137089
Many platform/mac-wk2/tiled-drawing/ tests fail when run on a retina device
https://bugs.webkit.org/show_bug.cgi?id=137089
Summary
Many platform/mac-wk2/tiled-drawing/ tests fail when run on a retina device
Beth Dakin
Reported
2014-09-24 16:56:02 PDT
Many platform/mac-wk2/tiled-drawing/ tests fail when run on a retina device. Specifically, tests that dump contentsScale consistently dump 2 instead of 1.
Attachments
Patch
(1.74 KB, patch)
2014-09-24 17:04 PDT
,
Beth Dakin
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2014-09-24 17:04:35 PDT
Created
attachment 238627
[details]
Patch
Beth Dakin
Comment 2
2014-09-26 16:18:34 PDT
Thanks Tim!
http://trac.webkit.org/changeset/174027
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug